62-contacts/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: dev
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /account
        pathType: Prefix
        backend:
          service:
            name: accountsite
            port:
              number: 8080
      - path: /movies
              pathType: Prefix
              backend:
                service:
                  name: moviessite
                  port:
                    number: 8080

# myportal.com/account
# /account  --> accounts service
# /movies    --> videos service
# images  --> images service
# games --> games service
